[project]
name = "portdex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.47.0",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.45",
]
