[project]
name = "portdex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.47.0",
    "google-auth-oauthlib>=1.2.2",
    "gspread>=6.2.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.45",
    "tqdm>=4.67.1",
    "typer>=0.21.1",
]
